AIST President Award 2024

--- a/en/index.html
+++ b/en/index.html
@@ -324,6 +324,11 @@ gtag('config', 'G-594401RXHW');
 	</header>
 	<div class="content list__excerpt post__content clearfix">
 		<p>We have estimated the fault geometry of the 2024 Noto Peninsula Earthquake in central Japan on 1 January 2024. Our analysis reveals major and minor fault planes aligned along the coastline beneath the peninsula. Notably, we identified a more counter-clockwise rotated plane in eastern Wajima and an east-dipping plane along the west coast. These localized structural complexities suggest intricate fault slip behavior and exhibit a strong correlation with gravity anomalies and geological structures. This research contributes to a deeper understanding of the formation and seismotectonics of the Noto Peninsula.</p>
+<p>We also won the <strong>AIST President Award 2024</strong> related to 
+
+<a href="https://www.aist.go.jp/aist_j/aist_award/2024/apa.html#s1" target="_blank" rel="noopener noreferrer">Contribution to National Earthquake Disaster Prevention Measures: Response to the 2024 Noto Peninsula Earthquake</a>
+
+ (in Japanese)!</p>
 <p>Check the paper and software below!</p>
 <ul>
 <li><strong>Sawaki, Y.</strong>, T. Shiina, K. Sagae, Y. Sato, H. Horikawa, A. Miyakawa, K. Imanishi, and T. Uchide (2025). Fault Geometries of the 2024 Mw 7.5 Noto Peninsula Earthquake from Hypocenter-Based Hierarchical Clustering of Point-Cloud Normal Vectors. <em>Journal of Geophysical Research: Solid Earth</em>, 130, e2024JB030233. 
